# gnumath

./: .gitignore  CMakeLists.txt  README.md  build-android.sh
gmp/: CMakeLists.txt
mpfr/: CMakeLists.txt
